Pass workflow-module-id to adapters